
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* instrumentor generates minimal method names for feature "defaultFeature"
* Resizing with ImageMagick works on Windows. 
	On Windows, install ImageMagick, and set the system properties com.exedio.cope.media.imagemagick (to "true") and 
	com.exedio.cope.media.convertcommand (to the absolute path of the convert binary).
* bugfix: Model failed on second connect, if there was a IntegerField.defaultToNext
* add MediaPath.Locator
* allow optional EnumField on Enum with one value only
* Item implements Comparable
* Type implements Comparable
* Price implements Comparable
* add Model#isConnected()
* rename Model.getProperties() to getConnectProperties()
	deprecated version is provided
* flush sequences in checkEmptySchema, fixes CopeTest
* remove Model.flushSequences()
	deprecated version is provided
* added conditions CompositeField.is[Not]Null()
* removed key in cope.properties: database.oracle.varchar
* deprecated Pattern.annotationField
* rename keys in cope.properties:
	cache.limit      -> cache.item.limit
	cache.queryLimit -> cache.query.limit
* rename CopeTest.getProperties() to getConnectProperties()
	deprecated version is provided
* added CompositeField.getValueClass()
* move com.exedio.cope.util.CopeFilter to package com.exedio.cope.misc
	deprecated version is provided
* added generic creator method "newValue(SetValue...)" for Composite on CompositeField
* made generic getters and setter on Composite public
* added CompositeField.getTemplate(FunctionField)
* added CompositeField.getTemplates()
* move ConnectToken and ServletUtil to package com.exedio.cope.misc
	deprecated version is provided
* move TransactionSlicer to package com.exedio.cope.misc