@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* CopeAssert.reserialize checks for exact expected size, not for maximum
+	this breaks backwards API compatibility, but affects junit tests only
 * instrumentor generates minimal method names for feature "defaultFeature"
 * Resizing with ImageMagick works on Windows. 
 	On Windows, install ImageMagick, and set the system properties com.exedio.cope.media.imagemagick (to "true") and 
